services/gitea/gitea-helmchart.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`git.k8s.internal`)
      services:
        - name: gitea-http
          port: 3000
      middlewares:
        - name: secured@file
