services/gitea/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitea.k8s.internal`)
      services:
        - name: gitea-http
          port: 3000
      middlewares:
        - name: secured@file
